Closed
Bug 429661
Opened 18 years ago
Closed 17 years ago
Crash [@ nsDocAccessible::FireShowHideEvents(nsIDOMNode*, int, unsigned int, int, int) ]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: MarcoZ, Assigned: surkov)
References
Details
(Keywords: access, crash)
Crash Data
Attachments
(2 files)
1016 bytes,
patch
|
aaronlev
:
review-
|
Details | Diff | Splinter Review |
1.29 KB,
patch
|
aaronlev
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
Found while triaging Firefox 3.0b5 crash reports in a11y module. One report:
bp-6ec6d707-0aa2-11dd-a4df-0013211cbf8a
The line implied is:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/base/nsDocAccessible.cpp&rev=1.238&mark=2067#2067
Looks like a simple NULL pointer check. Patch coming up.
Reporter | ||
Comment 1•18 years ago
|
||
Attachment #316417 -
Flags: review?(aaronleventhal)
Comment 2•18 years ago
|
||
Comment on attachment 316417 [details] [diff] [review]
add NULL check
We already check mDOMNode, so this would happen in the case where FireShowHideEvents() is called with the document node. The document node support nsIDOMNode but not nsIContent, so you'd get null for content.
We need to figure out how to do the right thing when the document is passed in. Maybe Ginn can look at this one.
Attachment #316417 -
Flags: review?(aaronleventhal) → review-
Assignee | ||
Comment 4•18 years ago
|
||
That's happen when InvalidateCacheSubtree() is called with nsnull (http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/accessible/src/base/nsDocAccessible.cpp&rev=1.238&mark=1797#1797)
Assignee | ||
Comment 5•18 years ago
|
||
Attachment #316572 -
Flags: review?(aaronleventhal)
Updated•17 years ago
|
Attachment #316572 -
Flags: review?(aaronleventhal)
Attachment #316572 -
Flags: review+
Attachment #316572 -
Flags: approval1.9?
Assignee | ||
Updated•17 years ago
|
Assignee: ginn.chen → surkov.alexander
Comment 6•17 years ago
|
||
Is this something that we need a test for?
Updated•17 years ago
|
Attachment #316572 -
Flags: approval1.9? → approval1.9-
Assignee | ||
Comment 7•17 years ago
|
||
Comment on attachment 316572 [details] [diff] [review]
patch
(In reply to comment #6)
> Is this something that we need a test for?
>
We haven't a way to reproduce the bug. We just have stack trace leading to crash. I tried to do small changes I can. If the having of test is major condition for the current status of the tree then let's wait for 1.9.x to land this trying of the the crash fix.
re-requesting approval
Attachment #316572 -
Flags: approval1.9- → approval1.9?
Comment 8•17 years ago
|
||
Comment on attachment 316572 [details] [diff] [review]
patch
a1.9+=damons
Attachment #316572 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 9•17 years ago
|
||
Checking in accessible/src/base/nsDocAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsDocAccessible.cpp,v <--
nsDocAccessible.cpp
new revision: 1.240; previous revision: 1.239
done
Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsDocAccessible::FireShowHideEvents(nsIDOMNode*, int, unsigned int, int, int) ]
You need to log in
before you can comment on or make changes to this bug.
Description
•