Bug 429661 - Crash [@ nsDocAccessible::FireShowHideEvents(nsIDOMNode*, int, unsigned int, int, int) ], r=aaronlev, a=dsicore